

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.4   **
        **                                         **
        *********************************************

NEW FEATURES

    o   DT[colA>3,which=TRUE] now returns row numbers rather
        than a logical vector, for consistency.
        

BUG FIXES

    o   Changing a keyed column name now updates the key, too,
        so an invalid key no longer arises, fixing #1495.
        Thanks to Chris Neff for reporting.
        
    o   := already warned when a numeric RHS is coerced to
        match an integer column's type. Now it also warns when
        numeric is coerced to logical, and integer is coerced
        to logical, fixing #1500. Thanks to Chris Neff for
        reporting. 

    o   The result of DT[,newcol:=3.14] now includes the new
        column correctly, as well as changing DT by reference,
        fixing #1496. Thanks to Chris Neff for reporting.
        
    o   :=NULL to remove a column (instantly, regardless of table
        size) now works rather than causing a segfault in some
        circumstances, fixing #1497. Thanks to Timothee Carayol
        for reporting.
        
    o   Previous within() and transform() behaviour restored; i.e.,
        can handle multiple columns again. Thanks to Timothee Carayol
        for reporting.
        
        
NOTES

    o   The package uses two features (packageVersion() and \href in Rd) 
        added to R 2.12.0 and is therefore dependent on that release.
        A 'spurious warning' when checking a package using \href was
        fixed in R 2.12.2 patched but we believe that warning can safely
        be ignored in versions >= 2.12.0 and < 2.12.2 patched.
                
        
        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.3   **