@@ -9,6 +9,10 @@ export(data.table, tables, setkey, key, "key<-", haskey, J, CJ, SJ)
 export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%between%")
 export(timetaken)
 
+export(cbind,rbind)
+# .Internal dispatch in the base functions prevents both cbind(DT,DF) and cbind(DT,vector)
+# from working using S3 methods cbind.data.table and cbind.data.frame.
+
 ## utility functions for testing with test_that
 ## export(is_equivalent_dt, expect_equivalent_dt)
 
@@ -23,8 +27,8 @@ S3method(as.data.table, data.frame)
 S3method(as.data.table, matrix)
 S3method(as.data.frame, data.table)
 S3method(as.matrix, data.table)
-S3method(cbind, data.table)
-S3method(rbind, data.table)
+# S3method(cbind, data.table)  # see comment above. 
+# S3method(rbind, data.table)
 S3method(dim, data.table)
 S3method(dimnames, data.table)
 S3method("dimnames<-", data.table)
